[package]
name = "ass-lsp"
version = "0.2.0"
edition = "2021"
description = "Language Server Protocol implementation for Advanced SubStation Alpha (ASS/SSA) subtitle format"
license = "MIT"
authors = ["wiedymi"]
repository = "https://github.com/wiedymi/ass-lsp"
homepage = "https://github.com/wiedymi/ass-lsp"
readme = "README.md"
keywords = ["lsp", "language-server", "ass", "ssa", "subtitles"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "ass-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.0"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
